--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,39 +1,248 @@
 {
   "header": {
     "title": "Комплексный <br /> автоподбор под ключ",
-    "overview": "Поможем подобрать идеальный <br /> автомобиль по вашим критериам"
+    "overview": "Поможем подобрать идеальный <br /> автомобиль по вашим критериям",
+    "buttons": { 
+      "submitRequest": "Оставить заявку",
+      "services": "Услуги"
+    }
   },
-  "button": {
-    "submitRequest": "Оставить заявку"
+  "navigation": {
+  "forWhom": "Для кого",
+  "services": "Наши услуги",
+  "details": "Подробнее",
+  "contacts": "Контакты"
+  },
+  "autoSelection": {
+    "title": "Для кого подходит автоподбор",
+    "subtitle": "Если узнаёте себя хотя бы в одном пункте — автоподбор вам реально поможет.",
+    "slides": {
+      "firstCarPurchase": {
+        "title": "Покупаете автомобиль впервые",
+        "desc": "Не разбираетесь в технических нюансах и боитесь купить проблемный или битый авто."
+      },
+      "dontWantToRiskMoney": {
+        "title": "Не хотите рисковать деньгами",
+        "desc": "Скрученный пробег и скрытые ДТП — мы исключаем такие варианты."
+      },
+      "valueYourTime": {
+        "title": "Цените своё время",
+        "desc": "Не нужно ездить по десяткам объявлений — мы сделаем всё за вас."
+      },
+      "buyUsedCar": {
+        "title": "Покупаете авто с пробегом",
+        "desc": "Проведём полную техническую и юридическую проверку перед покупкой."
+      },
+      "bestCarInBudget": {
+        "title": "Лучший авто в своём бюджете",
+        "desc": "Подберём оптимальный вариант по цене, состоянию и комплектации."
+      },
+      "dontUnderstandTheMarket": {
+        "title": "Не разбираетесь в рынке",
+        "desc": "Подскажем реальную стоимость и поможем сторговаться."
+      },
+      "locatedInAnotherCity": {
+        "title": "Находитесь в другом городе",
+        "desc": "Проверим авто за вас и сделаем фото- и видеоотчёт."
+      },
+      "dontWantToDealWithResellers": {
+        "title": "Не хотите связываться с перекупами",
+        "desc": "Работаем только с честными продавцами."
+      }
+    }
+  },
+  "servicesList": {
+    "1": {
+      "title": "Разовый осмотр автомобиля",
+      "price": "299zł",
+      "icon": "icon--one-time-diagnostics",
+      "description": "Комплексная техническая проверка автомобиля перед покупкой",
+      "bargain": "+20% торг",
+      "includedServices": [
+        "Проверка кузова толщиномером",
+        "Осмотр двигателя и подвески",
+        "Проверка коробки передач",
+        "Компьютерная диагностика",
+        "Проверка всех систем на ошибки",
+        "Проверка технического состояния",
+        "Полное описание состояния автомобиля",
+        "Тест-драйв",
+        "Проверка VIN + история",
+        "Фото и видеоотчёт",
+        "Рекомендации по покупке"
+      ]
+    },
+    "2": {
+      "recomended": true,
+      "title": "Автоподбор “Под ключ”",
+      "price": "1200 zł",
+      "icon": "icon--key",
+      "description": "Мы полностью берём процесс поиска и проверки авто на себя",
+      "bargain": "+20% торг",
+      "includedServices": [
+        "Анализ рынка под ваш бюджет",
+        "5–10 проверенных вариантов",
+        "Звонки продавцам",
+        "Отсев слабых вариантов",
+        "Полные выезды и осмотры",
+        "Диагностика + проверка VIN",
+        "Торг с продавцом",
+        "Сопровождение сделки",
+        "Подготовка документов"
+      ]
+    },
+    "4": {
+      "title": "Премиум подбор автомобиля",
+      "price": "2490 zł",
+      "icon": "icon--prem",
+      "description": "Для тех, кто хочет полный комфорт и премиальный сервис.",
+      "bargain": " ",
+      "includedServices": [
+        "Услуга подбора «под ключ»",
+        "Персональный менеджер",
+        "Детейлинг (полировка, химчистка) перед выдачей",
+        "Помощь со страховкой",
+        "Полная консультация по эксплуатации",
+        "Личное сопровождение клиента весь день"
+      ]
+    },
+    "5": {
+      "title": "Эксперт на день",
+      "price": "750 zł",
+      "icon": "icon--calendar",
+      "description": "Идеально для быстрого выбора и оценки нескольких авто за один день",
+      "bargain": " ",
+      "includedServices": [
+        "Выезд специалиста",
+        "Неограниченное количество осмотров авто в течение 10 часов",
+        "Полная диагностика каждого авто: кузов, двигатель, подвеска, КПП, электрика, тест-драйв, компьютерная диагностика, проверка VIN + юридическая история",
+        "Анализ объявлений перед поездкой",
+        "Согласование маршрута по времени",
+        "Торг с продавцами",
+        "Рекомендации по каждому авто",
+        "Итоговый совет: какой автомобиль выгоднее брать"
+      ],
+      "suitableFor": "Осмотр нескольких автомобилей за день и быстрое принятие решения"
+    }
   },
   "services": {
     "title": "Наши услуги",
-    "accordion": {
-      "sectionOne": {
-        "title": "Полный автоподбор \"под ключ\"",
-        "description": "Мы берём весь процесс на себя: поиск, проверка, диагностика, торг, проверка документов и сопровождение сделки. Клиент получает только лучшие варианты и финальный отчёт по выбранному авто"
+    "recommended": "Самый популярный",
+    "priceFrom": "Цена от",
+    "price": "Цена",
+    "order": "Заказать",
+    "info": "Инфо",
+    "outOfPoznan": "Выезд за пределы Познани:",
+    "servicesList": { "$ref": "servicesList" }
+  },
+  "servicesDetails": {
+    "title": "Детали услуг",
+    "experience": "лет опыта",
+    "checkedCars": "проверенных машин",
+    "successfulPurchases": "удачных покупок",
+    "location": "Познань, Польша",
+    "servicesList": { "$ref": "servicesList" }
+  },
+  "contacts": {
+    "title": "Связаться c AB AutoCheck",
+    "responseTime": "⏱ Ответ в течение 10–15 минут",
+    "workingHours": "Время работы Пн-Вс, с 9:00 до 22:00",
+    "servicesList": {
+      "instagram": {
+        "title": "Instagram",
+        "label": "НАПИСАТЬ"
       },
-      "sectionTwo": {
-        "title": "Разовая проверка выбранного авто",
-        "description": "Вызываемся на конкретное объявление. На месте проверяем кузов, двигатель, подвеску, электронику, делаем диагностику, измеряем лакокрасочное покрытие и даём вердикт: брать или не брать"
+      "facebook": {
+        "title": "Facebook",
+        "label": "НАПИСАТЬ"
       },
-      "sectionThree": {
-        "title": "Диагностика перед покупкой",
-        "description": "Фокус на техническом состоянии. Определяем скрытые проблемы, реальные вложения в ближайшее время, оцениваем риски. Подходит, если клиент уже почти определился"
+      "telegram": {
+        "title": "Telegram",
+        "label": "НАПИСАТЬ"
       },
-      "sectionFour": {
-        "title": "Проверка документов и юридической чистоты",
-        "description": " Пробиваем VIN, историю обслуживания, страховые записи, участие в ДТП, залоги, лизинг, аресты. Гарантируем, что машина юридически чиста и безопасна к покупке"
-      },
-      "sectionFive": {
-        "title": " Онлайн-консультации перед покупкой",
-        "description": "Оцениваем объявление дистанционно: по фото, описанию, видео и истории. Говорим сразу, стоит ли ехать смотреть или лучше не тратить время"
-      },
-      "sectionSix": {
-        "title": " Оценка стоимости автомобиля",
-        "description": "Проведем профессиональную оценку автомобиля перед покупкой для понимания реальной стоимости"
+      "phone": {
+        "title": "Номер",
+        "label": "+48 537 634 858"
       }
     }
-}
+  },
+  "footer": {
+    "title": "AB AutoCheck",
+    "companyInfo1": "Автоподбор и проверка автомобилей в Польше",
+    "companyInfo2": "Познань и выезд по регионам",
+    "navigation": "Навигация",
+     "forWhom": "Для кого",
+    "services": "Наши услуги",
+    "more": "Подробнее",
+    "contacts": "Контакты",
+    "workingHours": "График работы",
+    "workingHoursTime": "Пн-Вс: 9:00 - 22:00",
+    "responseTimeLabel": "Среднее время ответа:",
+    "responseTime": "10-15 минут",
+    "results": "Наши результаты",
+    "checkedCars": "проверенных авто",
+    "successfulPurchases": "удачных покупок",
+    "yearsExperience": "лет опыта",
+    "privacyPolicy": "Политика конфиденциальности",
+    "termsOfService": "Условия оказания услуг"
+  },
+  "privacyPolicy": {
+    "backButton": "Назад",
+    "title": "Политика конфиденциальности",
+    "intro": "Настоящая Политика конфиденциальности объясняет, как ",
+    "companyName": "AB AutoCheck",
+    "section1": {
+      "title": "1. Общие положения",
+      "content": "Сайт и услуги предоставляет AB AutoCheck.",
+      "ownership": "Владелец и исполнитель услуг — Андрей"
+    },
+    "section2": {
+      "title": "2. Сбор персональных данных",
+      "content": "На сайте AB AutoCheck:",
+      "item1": "не используются формы заявок;",
+      "item2": "не осуществляется регистрация пользователей;",
+      "item3": "не собираются и не хранятся персональные данные."
+    },
+    "section3": {
+      "title": "3. Связь с клиентом",
+      "content": "Связь с клиентами осуществляется исключительно по инициативе самого пользователя через следующие каналы:",
+      "item1": "телефон;",
+      "item2": "Telegram;",
+      "item3": "Instagram;",
+      "item4": "Facebook."
+    },
+    "section4": {
+      "title": "4. Использование информации",
+      "content": "Информация, полученная в процессе личного общения, используется только для:",
+      "item1": "связи с клиентом;",
+      "item2": "консультаций;",
+      "item3": "оказания услуг автоподбора и проверки автомобилей."
+    },
+    "section5": {
+      "title": "5. Хранение данных",
+      "content": "Сайт AB AutoCheck не осуществляет хранение персональных данных. Переписка и информация, переданные через сторонние сервисы (мессенджеры и социальные сети), хранятся в рамках правил и политики соответствующих платформ."
+    },
+    "section6": {
+      "title": "6. Передача данных третьим лицам",
+      "content": "Персональные данные клиентов не передаются третьим лицам, за исключением случаев, предусмотренных действующим законодательством."
+    },
+    "section7": {
+      "title": "7. Использование cookies и аналитики",
+      "content": "На сайте AB AutoCheck:",
+      "item1": "не используются cookies;",
+      "item2": "не применяются системы аналитики (Google Analytics, Facebook Pixel и другие)."
+    },
+    "section8": {
+      "title": "8. Права пользователя",
+      "content": "Пользователь имеет право:",
+      "item1": "запросить информацию о своих персональных данных;",
+      "item2": "потребовать прекращения общения и удаления переданных данных в рамках используемых каналов связи."
+    },
+    "section9": {
+      "title": "9. Изменения политики",
+      "content": "Администрация сайта оставляет за собой право вносить изменения в настоящую Политику конфиденциальности без предварительного уведомления. Актуальная версия всегда доступна на сайте."
+    }
+  }
 
 }
+
