--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,38 +1,246 @@
 {
   "header": {
     "title": "Комплексний <br /> автопідбір під ключ",
-    "overview": "Допоможемо підібрати ідеальний <br /> автомобіль за вашими критеріями"
+    "overview": "Допоможемо підібрати ідеальний <br /> автомобіль за вашими критеріями",
+    "buttons": { 
+      "submitRequest": "Залишити заявку",
+      "services": "Послуги"
+    }
   },
-  "button": {
-    "submitRequest": "Залишити заявку"
+  "navigation": {
+  "forWhom": "Для кого",
+  "services": "Наші послуги",
+  "details": "Детальніше",
+  "contacts": "Контакти"
+},
+  "autoSelection": {
+    "title": "Для кого підходить автопідбір",
+    "subtitle": "Якщо ви впізнали себе хоча б в одному пункті — автопідбір дійсно допоможе.",
+    "slides": {
+      "firstCarPurchase": {
+        "title": "Покупаєте автомобіль вперше",
+        "desc": "Не розбираєтесь в технічних нюансах і боїтесь купити проблемний чи битий автомобіль."
+      },
+      "dontWantToRiskMoney": {
+        "title": "Не хочете ризикувати грошима",
+        "desc": "Перекручений пробіг і приховані ДТП — ми виключаємо такі варіанти."
+      },
+      "valueYourTime": {
+        "title": "Цінуєте свій час",
+        "desc": "Не треба їздити по десятках оголошень — ми зробимо все за вас."
+      },
+      "buyUsedCar": {
+        "title": "Купуєте авто з пробігом",
+        "desc": "Зробимо повну технічну та юридичну перевірку перед покупкою."
+      },
+      "bestCarInBudget": {
+        "title": "Найкраще авто у своєму бюджеті",
+        "desc": "Підберемо оптимальний варіант по ціні, стану та комплектації."
+      },
+      "dontUnderstandTheMarket": {
+        "title": "Не розбираєтесь у ринку",
+        "desc": "Підкажемо реальну вартість та допоможемо поторгуватись."
+      },
+      "locatedInAnotherCity": {
+        "title": "Знаходитесь в іншому місті",
+        "desc": "Перевіримо авто за вас і зробимо фото- та відеозвіт."
+      },
+      "dontWantToDealWithResellers": {
+        "title": "Не хочете мати справу з перекупами",
+        "desc": "Працюємо тільки з чесними продавцями."
+      }
+    }
+  },
+  "servicesList": {
+    "1": {
+      "title": "Разова перевірка автомобіля",
+      "price": "299zł",
+      "icon": "icon--one-time-diagnostics",
+      "description": "Комплексна технічна перевірка автомобіля перед покупкою",
+      "bargain": "+20% торг",
+      "includedServices": [
+        "Перевірка кузова товщиноміром",
+        "Огляд двигуна та підвіски",
+        "Перевірка коробки передач",
+        "Комп'ютерна діагностика",
+        "Перевірка всіх систем на помилки",
+        "Перевірка технічного стану",
+        "Повний опис стану автомобіля",
+        "Тест-драйв",
+        "Перевірка VIN + історія",
+        "Фото та відеозвіт",
+        "Рекомендації щодо покупки"
+      ]
+    },
+    "2": {
+      "recomended": true,
+      "title": "Автопідбір “Під ключ”",
+      "price": "1200 zł",
+      "icon": "icon--key",
+      "description": "Ми повністю беремо процес пошуку та перевірки авто на себе",
+      "bargain": "+20% торг",
+      "includedServices": [
+        "Аналіз ринку під ваш бюджет",
+        "5–10 перевірених варіантів",
+        "Телефони до продавців",
+        "Відсів слабких варіантів",
+        "Повні виїзди та огляди",
+        "Діагностика + перевірка VIN",
+        "Торг з продавцем",
+        "Супровід угоди",
+        "Підготовка документів"
+      ]
+    },
+    "4": {
+      "title": "Преміум підбір автомобіля",
+      "price": "2490 zł",
+      "icon": "icon--prem",
+      "description": "Для тих, хто хоче повний комфорт і преміальний сервіс.",
+      "bargain": " ",
+      "includedServices": [
+        "Послуга підбору «під ключ»",
+        "Персональний менеджер",
+        "Детейлінг (полірування, хімчистка) перед видачею",
+        "Допомога з отриманням страховки",
+        "Повна консультація по експлуатації",
+        "Особисте супроводження клієнта весь день"
+      ]
+    },
+    "5": {
+      "title": "Експерт на день",
+      "price": "750 zł",
+      "icon": "icon--calendar",
+      "description": "Ідеально для швидкого вибору та оцінки кількох авто за один день",
+      "bargain": " ",
+      "includedServices": [
+        "Виїзд спеціаліста",
+        "Необмежена кількість оглядів авто протягом 10 годин",
+        "Повна діагностика кожного авто: кузов, двигун, підвіска, КПП, електрика, тест-драйв, комп'ютерна діагностика, перевірка VIN + юридична історія",
+        "Аналіз оголошень перед поїздкою",
+        "Узгодження маршруту за часом",
+        "Торг з продавцями",
+        "Рекомендації по кожному авто",
+        "Кінцева порада: який автомобіль вигідніше брати"
+      ],
+      "suitableFor": "Огляд кількох автомобілів за день і швидке прийняття рішення"
+    }
   },
   "services": {
     "title": "Наші послуги",
-    "accordion": {
-      "sectionOne": {
-        "title": "Повний автопідбір \"під ключ\"",
-        "description": "Ми беремо весь процес на себе: пошук, перевірка, діагностика, торг, перевірка документів та супровід угоди. Клієнт отримує тільки найкращі варіанти та фінальний звіт по вибраному авто"
+    "recommended": "Найпопулярніший",
+    "priceFrom": "Ціна від",
+    "price": "Ціна",
+    "order": "Замовити",
+    "info": "Інфо",
+    "outOfPoznan": "Виїзд за межі Познані:",
+    "servicesList": { "$ref": "servicesList" }
+  },
+  "servicesDetails": {
+     "title": "Деталі послуг",
+    "experience": "років досвіду",
+    "checkedCars": "перевірених автомобілів",
+    "successfulPurchases": "вдалих покупок",
+    "location": "Познань, Польща",
+    "servicesList": { "$ref": "servicesList" }
+  },
+  "contacts": {
+    "title": "Зв'язатися з AB AutoCheck",
+    "responseTime": "⏱ Відповідь протягом 10–15 хвилин",
+    "workingHours": "Час роботи Пн-Нд, з 9:00 до 22:00",
+    "servicesList": {
+      "instagram": {
+        "title": "Instagram",
+        "label": "НАПИСАТИ"
       },
-      "sectionTwo": {
-        "title": "Разова перевірка вибраного авто",
-        "description": "Виїжджаємо на конкретне оголошення. На місці перевіряємо кузов, двигун, підвіску, електроніку, робимо діагностику, вимірюємо лакофарбове покриття та даємо вердикт: брати чи не брати"
+      "facebook": {
+        "title": "Facebook",
+        "label": "НАПИСАТИ"
       },
-      "sectionThree": {
-        "title": "Діагностика перед покупкою",
-        "description": "Фокус на технічному стані. Визначаємо приховані проблеми, реальні вкладення найближчим часом, оцінюємо ризики. Підходить, якщо клієнт вже майже визначився"
+      "telegram": {
+        "title": "Telegram",
+        "label": "НАПИСАТИ"
       },
-      "sectionFour": {
-        "title": "Перевірка документів та юридичної чистоти",
-        "description": "Пробиваємо VIN, історію обслуговування, страхові записи, участь у ДТП, застави, лізинг, арешти. Гарантуємо, що авто юридично чисте та безпечне для покупки"
-      },
-      "sectionFive": {
-        "title": "Онлайн-консультації перед покупкою",
-        "description": "Оцінюємо оголошення дистанційно: по фото, опису, відео та історії. Говоримо одразу, чи варто їхати дивитись або краще не витрачати час"
-      },
-      "sectionSix": {
-        "title": "Оцінка вартості автомобіля",
-        "description": "Проведемо професійну оцінку автомобіля перед покупкою для розуміння реальної вартості"
+      "phone": {
+        "title": "Номер",
+        "label": "+48 537 634 858"
       }
+    }
+  },
+  "footer": {
+    "title": "AB AutoCheck",
+    "companyInfo1": "Автопідбір і перевірка автомобілів в Польщі",
+    "companyInfo2": "Познань і виїзд по регіонах",
+    "navigation": "Навігація",
+    "forWhom": "Для кого",
+    "services": "Наші послуги",
+    "more": "Детальніше",
+    "contacts": "Контакти",
+    "workingHours": "Графік роботи",
+    "workingHoursTime": "Пн-Нд: 9:00 - 22:00",
+    "responseTimeLabel": "Середній час відповіді:",
+    "responseTime": "10-15 хвилин",
+    "results": "Наші результати",
+    "checkedCars": "перевірених авто",
+    "successfulPurchases": "вдалих покупок",
+    "yearsExperience": "років досвіду",
+    "privacyPolicy": "Політика конфіденційності",
+    "termsOfService": "Умови надання послуг"
+  },
+  "privacyPolicy": {
+    "backButton": "Назад",
+    "title": "Політика конфіденційності",
+    "intro": "Ця Політика конфіденційності пояснює, як ",
+    "companyName": "AB AutoCheck",
+    "section1": {
+      "title": "1. Загальні положення",
+      "content": "Сайт та послуги надаються AB AutoCheck.",
+      "ownership": "Власник та виконавець послуг — Андрій"
+    },
+    "section2": {
+      "title": "2. Збір персональних даних",
+      "content": "На сайті AB AutoCheck:",
+      "item1": "не використовуються форми заявок;",
+      "item2": "не здійснюється реєстрація користувачів;",
+      "item3": "не збираються та не зберігаються персональні дані."
+    },
+    "section3": {
+      "title": "3. Зв'язок з клієнтом",
+      "content": "Зв'язок з клієнтами здійснюється виключно за ініціативою самого користувача через наступні канали:",
+      "item1": "телефон;",
+      "item2": "Telegram;",
+      "item3": "Instagram;",
+      "item4": "Facebook."
+    },
+    "section4": {
+      "title": "4. Використання інформації",
+      "content": "Інформація, отримана в процесі особистого спілкування, використовується тільки для:",
+      "item1": "зв'язку з клієнтом;",
+      "item2": "консультацій;",
+      "item3": "надання послуг автопідбору та перевірки автомобілів."
+    },
+    "section5": {
+      "title": "5. Зберігання даних",
+      "content": "Сайт AB AutoCheck не здійснює зберігання персональних даних. Переписка та інформація, передані через сторонні сервіси (месенджери та соціальні мережі), зберігаються відповідно до правил та політики відповідних платформ."
+    },
+    "section6": {
+      "title": "6. Передача даних третім особам",
+      "content": "Персональні дані клієнтів не передаються третім особам, за винятком випадків, передбачених чинним законодавством."
+    },
+    "section7": {
+      "title": "7. Використання cookies та аналітики",
+      "content": "На сайті AB AutoCheck:",
+      "item1": "не використовуються cookies;",
+      "item2": "не застосовуються системи аналітики (Google Analytics, Facebook Pixel та інші)."
+    },
+    "section8": {
+      "title": "8. Права користувача",
+      "content": "Користувач має право:",
+      "item1": "запитати інформацію про свої персональні дані;",
+      "item2": "потребувати припинення спілкування та видалення переданих даних у рамках використовуваних каналів зв'язку."
+    },
+    "section9": {
+      "title": "9. Зміни політики",
+      "content": "Адміністрація сайту залишає за собою право вносити зміни в цю Політику конфіденційності без попереднього повідомлення. Актуальна версія завжди доступна на сайті."
     }
   }
 }
